// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyUser Component when user is authorized(admin) should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ sc-gsnTZi doahKO hzPtvw"
        height="100%"
        width="100%"
      >
        <img
          class="sc-bczRLJ iQjTFr"
          src="Illustration_Phone-OTP.svg"
        />
        <div
          class="sc-bczRLJ bOThQT"
        >
          Making sure it's you
        </div>
        <div
          class="sc-bczRLJ fyHqCQ"
          font-family="secondary"
        >
          We will send a text with a one time password to *** *** 
          .
        </div>
      </div>
      <div
        class="sc-bczRLJ sc-gsnTZi jIxXay hzPtvw"
        width="100%"
      >
        <button
          class="sc-bczRLJ iElVFP"
          font-size="16px"
          height="48px"
          width="100%"
        >
          SHOW
           VERIFICATION CODE
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ sc-gsnTZi doahKO hzPtvw"
      height="100%"
      width="100%"
    >
      <img
        class="sc-bczRLJ iQjTFr"
        src="Illustration_Phone-OTP.svg"
      />
      <div
        class="sc-bczRLJ bOThQT"
      >
        Making sure it's you
      </div>
      <div
        class="sc-bczRLJ fyHqCQ"
        font-family="secondary"
      >
        We will send a text with a one time password to *** *** 
        .
      </div>
    </div>
    <div
      class="sc-bczRLJ sc-gsnTZi jIxXay hzPtvw"
      width="100%"
    >
      <button
        class="sc-bczRLJ iElVFP"
        font-size="16px"
        height="48px"
        width="100%"
      >
        SHOW
         VERIFICATION CODE
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`VerifyUser Component when user is not authorized(admin) should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ sc-gsnTZi doahKO hzPtvw"
        height="100%"
        width="100%"
      >
        <img
          class="sc-bczRLJ iQjTFr"
          src="Illustration_Phone-OTP.svg"
        />
        <div
          class="sc-bczRLJ bOThQT"
        >
          Making sure it's you
        </div>
        <div
          class="sc-bczRLJ fyHqCQ"
          font-family="secondary"
        >
          We will send a text with a one time password to *** *** 
          .
        </div>
      </div>
      <div
        class="sc-bczRLJ sc-gsnTZi jIxXay hzPtvw"
        width="100%"
      >
        <button
          class="sc-bczRLJ iElVFP"
          font-size="16px"
          height="48px"
          width="100%"
        >
          SEND
           VERIFICATION CODE
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ sc-gsnTZi doahKO hzPtvw"
      height="100%"
      width="100%"
    >
      <img
        class="sc-bczRLJ iQjTFr"
        src="Illustration_Phone-OTP.svg"
      />
      <div
        class="sc-bczRLJ bOThQT"
      >
        Making sure it's you
      </div>
      <div
        class="sc-bczRLJ fyHqCQ"
        font-family="secondary"
      >
        We will send a text with a one time password to *** *** 
        .
      </div>
    </div>
    <div
      class="sc-bczRLJ sc-gsnTZi jIxXay hzPtvw"
      width="100%"
    >
      <button
        class="sc-bczRLJ iElVFP"
        font-size="16px"
        height="48px"
        width="100%"
      >
        SEND
         VERIFICATION CODE
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
